@@ -264,7 +264,7 @@ public class TARDISARSMethods {
      * @param str  the lore to set
      */
     void setLore(InventoryView view, int slot, String str) {
-        List<String> lore = (str != null) ? Collections.singletonList(str) : null;
+        List<String> lore = (str != null) ? List.of(str) : null;
         ItemStack is = view.getItem(slot);
         ItemMeta im = is.getItemMeta();
         im.setLore(lore);
